--- a/templates/index.html
+++ b/templates/index.html
@@ -22,12 +22,14 @@
     <div id="map"></div>
     
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
-    <script src="app.js"></script>
+    <script src="{{url_for('static', filename='app.js')}}"></script>
 
     <!--initialize scripts-->
-    <script src = "script.js"></script>
+    <script src = "{{url_for('static', filename='script.js')}}"></script>
+    <!--<script src = "{{url_for('static', filename='vision.js')}}"></script>-->
 
     <!--adding firestore and apis used-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase-firestore.js"></script>
     <script async defer
